style/room_layout.css
/* Disable bounce scrolling in Safari */
html.in-room {
    overflow: hidden;
    height: 100%;
}

/* Header */
#header {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    width: 100%;
    height: 60px;
    background: #F3F3F3;
    box-shadow: 0 -4px 6px 6px rgba(0,0,0,0.15), 0 1px 0 rgba(0,0,0,0.05);
    cursor: default;
}
.header-side {
    position: absolute;
    width: 25%;
    height: 60px;
    color: #FFF;
    background: -webkit-linear-gradient(top, #719FA6, #6C979E);
    background: linear-gradient(to bottom, #719FA6, #6C979E);
}
.header-talk {
    position: relative;
    height: 60px;
    margin-left: 25%;
    background: -webkit-linear-gradient(top, #F6F6F6, #F1F1F1);
    background: linear-gradient(to bottom, #F6F6F6, #F1F1F1);
    box-shadow: inset 1px 0 0 #FFFFFF, -1px 0 0 rgba(0,0,0,0.18);
}
.header-toolbar {
    position: relative;
    margin-left: 40px;
    height: 60px;
    overflow: hidden;
}
.header-show-side {
    position: absolute;
    display: none;
    width: 16px;
    height: 16px;
    padding: 22px 20px 20px 24px;
    cursor: pointer;
    color: #A0A0A0;
}

/* Columns */
#side,
#talk {
    position: absolute;
    top: 0;
    height: 100%;
}
#side {
    width: 25%;
    overflow-x: hidden;
}
#talk {
    right: 0;
    left: 25%;
    z-index: 1;
    background: #F8F8F8;
    box-shadow: -1px 0 0 rgba(0,0,0,0.06), 0 8px 8px rgba(0,0,0,0.05);
}

/* Columns scroll */
.side-content,
.talk-content {
    position: absolute;
    top: 60px;
    left: 0;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}
.side-content {
    right: -25px;
    bottom: 0;
    padding-right: 25px;
    background: url('side.png') #EBE9E8;
    background-attachment: local;
}
.talk-content {
    bottom: 78px;
    width: 100%;
    -webkit-transition: opacity .25s;
            transition: opacity .25s;
}
.talk-loading {
    opacity: 0.5;
}

/* Overlay */
.talk-overlay {
    position: absolute;
    top: 60px;
    left: 0;
    bottom: 0;
    z-index: 2;
    width: 100%;
    background: #F8F8F8;
}

/* Reply form */
.talk-reply {
    position: absolute;
    bottom: 0;
    z-index: 1;
    width: 100%;
    background: #FAFAFA;
    box-shadow: 0 -1px 0 rgba(0,0,0,0.08);
}
.talk-reply:before {
    content: '';
    position: absolute;
    top: 0;
    width: 100%;
    height: 10px;
    border-radius: 50%;
    box-shadow: 0 0 12px rgba(0,0,0,0.1);
    clip: rect(-12px, 2000px, 0, 0);
}
.reply-form {
    position: relative;
    min-height: 58px;
    padding: 9px 0 11px;
}

/* Forced scroll in iOS */
.force-scroll:after {
    content: '';
    position: absolute;
    top: 100%;
    left: 0;
    width: 2px;
    height: 2px;
}

/* Sidebar sliding animation */
.visible-side #side,
.visible-side #talk,
.visible-side .header-side,
.visible-side .header-talk {
    -webkit-font-smoothing: subpixel-antialiased;
    -webkit-transition: -webkit-transform .25s;
            transition: transform .25s;
}
.sliding-side #side,
.sliding-side .header-side {
    -webkit-transform: translateX(-80px);
            transform: translateX(-80px);
}
.sliding-side #talk,
.sliding-side .header-talk {
    -webkit-transform: translateX(-256px);
            transform: translateX(-256px);
}

@media (min-width: 1400px) {

    #side,
    .header-side {
        width: 350px;
    }
    #talk {
        left: 350px;
    }
    .header-talk {
        margin-left: 350px;
    }

}

@media (max-width: 1024px) {

    #side,
    .header-side {
        width: 256px;
    }
    #talk {
        left: 256px;
    }
    .header-talk {
        margin-left: 256px;
    }

}

@media (max-width: 800px) {

    /* Hide sidebar by default */
    #side,
    .header-side {
        display: none;
    }
    #talk {
        right: auto;
        left: 0;
        width: 100%;
    }
    .header-talk {
        margin-left: 0;
    }

    /* Side control */
    .header-show-side {
        display: block;
    }
    .header-toolbar {
        margin-left: 60px;
    }

    /* Show sidebar */
    .visible-side #side,
    .visible-side .header-side {
        display: block;
    }
    .visible-side #talk,
    .visible-side .header-talk {
        left: 256px;
    }

    /* Prevent horizontal scroll */
    .visible-side {
        position: relative;
        height: 100%;
        overflow: hidden;
    }

}

